# AR-unsupervised-learning

./: .gitignore  LICENSE  README.md  ggmm_kernels.cu  setup.py
cuda_check/: cuda_check.c
example/: generateTest.py  generator.py  gmmtest.py  testGMM.py  testgen.m
example/test results/data/test 1/: data.txt
example/test results/data/test 2/: data.txt
example/test results/data/test 3/: converted.txt
experiment/Matlab/: Human_Sensor_Test.m  emgmm.py  generator.m  link.m  makePlot.m  resample.m  sat.m  viconCallback_Head.m  viconCallback_Quad.m
experiment/Python/: generator.py
experiment/ROS/quad_control/: CMakeLists.txt  package.xml
experiment/ROS/quad_control/launch/: control.launch
experiment/ROS/quad_control/src/: convert.cpp
experiment/Test Results/GMM Test/: Summary.txt
experiment/Test Results/GMM Test/test 1/: converted.txt  data.txt
experiment/Test Results/GMM Test/test 2/: converted.txt  data.txt
experiment/Test Results/GMM Test/test 3/: converted.txt  data.txt
scripts/: Human_Sensor_Test.m  emgmm.py  generator.m  link.m  resample.m
tests/: test_cgmm.py  test_ggmm.py
wgmm/: __init__.py  cpu.py  gpu.py  wgmm.py
